todo-app/manifests/deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: todo-app-pvclaim
      containers:
        - name: todo-backend
          image: todo-backend:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
