todo-app/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 5001
