todo-app/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 1235
      protocol: TCP
      targetPort: 80
